--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ PORT=3222
 
 NODE_ENV=development
 
-DATABASE_HOST=
-DATABASE_NAME=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_PORT=
-DATABASE_CLIENT=
+DATABASE_HOST=localhost
+DATABASE_NAME=EZPAY
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=123
+DATABASE_PORT=5432
+DATABASE_CLIENT=postgres
