--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/platform-fastify": "^9.3.9",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/terminus": "^9.2.0",
     "@nestjs/typeorm": "^9.0.1",
@@ -58,6 +59,7 @@
     "@nestjs/testing": "^9.3.9",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
