--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "#/*": ["./src/*"]
+      "#/*": ["./node_modules/src/*"]
     }
   }
 }
