--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.1",
     "joi": "^17.7.1",
     "nestjs-pino": "^3.1.2",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
