--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookies": "^0.9.1",
     "joi": "^17.7.1",
     "nestjs-pino": "^3.1.2",
     "nodemailer": "^6.9.15",
