--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/terminus": "^9.2.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/cookie-parser": "^1.4.7",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "cookies": "^0.9.1",
     "joi": "^17.7.1",
     "nestjs-pino": "^3.1.2",
@@ -59,7 +61,7 @@
     "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.9",
-    "@types/express": "^4.17.17",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.0",
